# ConeDetection_VLP16

./: LICENSE  README.md
Matlab_DevTest/: Download errors.txt  processLIDAR_ref.rsp.txt
Matlab_DevTest/Ibeo_Lux-KIT_DataSet/: LIDAR_ibeo_processing.m  README.txt  findInRadius.m  ibeo_final.m  ibeo_lidar.m  load_lux_lidar.m  parseLIDAR.m  processLIDAR.m  scan_20180129_1600.txt
Matlab_DevTest/Velodyne/: E0711-8.txt  LIDAR_NOptcloud.m  LIDAR_adapted.m  LIDAR_preloaded.m  LIDAR_process_MATLAB.m  READ ME - Velodyne data explained.txt  READ ME - gps.txt  READ ME - imu.txt  READ ME - optical_speed_sensor.txt  READ ME - velodyne_points.txt  READ ME - wheel_rpm.txt  XYZ.mat  accel.mat  bag.mat  extractingData_test.m  findInRadius.m  findInRadius_.m  gps_and_accel_readings.m  gps_data.mat  kistler.mat  lidar.mat  lidar_one_scan.mat  lidar_plot.m  mean_val.m  processLIDAR - Copy.m  processLIDAR.m  processLIDAR.prj  processLIDAR_.m  processLIDAR_cuda.prj  processLIDAR_script.m  readXYZ.m  read_bag_file.m  save1_lidar_obr.m  save3_lidar_obr.m  save4_lidar_obr.m  store_ptcloud.m  velodyne_plotting.m  velodyne_plotting_v2.m  velodyne_plotting_v3.m  velodyne_plotting_v4.m  (+2 more)
Matlab_DevTest/Velodyne/Scans/: Scan_20180128_2100
Matlab_DevTest/Velodyne/codegen/mex/processLIDAR/: cfiGuiReport.mat  gcGuiReport.mat  processLIDAR_mex.mexw64
Matlab_DevTest/Velodyne/codegen/mex/processLIDAR/html/: exported_values.mat  findInRadius74_mcode.html  findInRadius74_watch.html  index.html  processLIDAR1_mcode.html  processLIDAR1_watch.html
velodyne_puck_decoder/: CMakeLists.txt  package.xml
velodyne_puck_decoder/include/velodyne_puck_decoder/: velodyne_puck_decoder.h
velodyne_puck_decoder/launch/: velodyne_puck_decoder_nodelet.launch
velodyne_puck_decoder/msg/: lidarDataTypeArray.msg
velodyne_puck_decoder/src/: CONSTANTS.h  VLP16.cpp  VLP16.h  main.cpp
velodyne_puck_driver/launch/: velodyne_puck_driver_nodelet.launch
